...
    <string name="welcome_wait_title">Vielä pieni tarkistus</string>
    <string name="welcome_wait_body">Pyydä kutsun lähettäjää päästämään sinut mukaan. Verratkaa tätä koodia:</string>
    <string name="welcome_wait_hint">Perheen tehtävät näkyvät hyväksymisen jälkeen. Voit poistua ja palata asetuksista.</string>
    <string name="welcome_invitation_title">Sinun kutsusi</string>
    <string name="welcome_invitation_unavailable">Tämä kutsu ei enää odota hyväksyntää. Pyydä perheeltäsi uusi linkki.</string>
    <string name="welcome_check">Tarkista uudelleen</string>
    <string name="welcome_new_invitation">Käytä uutta kutsua</string>
    <string name="welcome_approval">Päästetäänkö %1$s mukaan?</string>
    <string name="welcome_later">Takaisin tehtäviini</string>
    <string name="welcome_setup">Perheen käyttöönotto</string>
    <string name="welcome_save_failed">Käyttöönottoa ei voitu tallentaa puhelimelle. Vapauta tilaa ja yritä uudelleen.</string>
</resources>

